Updated AUTO_TYPING to off for session BLADE=fAdQzLhB#_FHqoNZhQjKeNmex8mI4UeOy5Fibuonc8byMSWeX7fw

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "BLADE=fAdQzLhB#_FHqoNZhQjKeNmex8mI4UeOy5Fibuonc8byMSWeX7fw": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": true,
+    "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
