Updated config - Added settings for: BLADE=PUskEYLB#OilIDsyZsytGjnuXjjYdzyl4pvRAe7KBSaDilWmxErE

--- a/config.json
+++ b/config.json
@@ -23,6 +23,6 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "AUTO_READ": true,
-    "PASS": "q@dU6"
+    "PASS": "o1D9Q"
   }
 }
