--- a/config.json
+++ b/config.json
@@ -15,7 +15,9 @@
   },
   "BLADE=PUskEYLB#OilIDsyZsytGjnuXjjYdzyl4pvRAe7KBSaDilWmxErE": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🩵"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
