--- a/config.json
+++ b/config.json
@@ -12,6 +12,6 @@
     "OWNER_NUMBER": "94764497078",
     "AUTO_READ": true,
     "USER_COINS": '',
-    "PASS": "lSnuJ"
+    "PASS": "2007"
   }
 }
