--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "AUTO_READ": true,
+        "FOTER": "> Powered by King Switch",
     "USER_COINS": {
       "447427846660@s.whatsapp.net": 50
     },
