Updated FOTER for session BLADE=fJ02gDbQ#orK4zPNIctc2g55_Q54wGaEzu5E85y3aVchcicwY02g

--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "AUTO_READ": true,
-        "FOTER": "> Powered by King Switch",
+    "FOTER": "my bot",
     "USER_COINS": {
       "447427846660@s.whatsapp.net": 50
     },
