--- a/config.json
+++ b/config.json
@@ -10,6 +10,7 @@
     "OWNER_NUMBER": "94764497078",
     "AUTO_READ": true,
     "BOT_NAME": "Blade md",
+    "PASS": "2007",
     "MENU_URL": "https://files.catbox.moe/p826lq.jpg",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
