--- a/config.json
+++ b/config.json
@@ -15,6 +15,8 @@
     "PASS": "2007",
     "MENU_URL": "https://files.catbox.moe/p826lq.jpg",
     "FOTER": "Hi nnn",
-    "USER_COINS": null
+"USER_COINS": {
+  "447427846660@s.whatsapp.net": 100
+}
   }
 }
