--- a/config.json
+++ b/config.json
@@ -11,12 +11,12 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "AUTO_READ": true,
-    "BOT_NAME": "Queen amdi",
+    "BOT_NAME": "Queen Elizabeth",
     "PASS": "2007",
     "MENU_URL": "https://files.catbox.moe/p826lq.jpg",
     "FOTER": "Hi nnn",
-"USER_COINS": {
-  "447427846660@s.whatsapp.net": 100
-}
+    "USER_COINS": {
+      "447427846660@s.whatsapp.net": 25
+    }
   }
 }
