--- a/config.json
+++ b/config.json
@@ -13,10 +13,10 @@
     "AUTO_READ": true,
     "BOT_NAME": "Queen Elizabeth",
     "PASS": "2007",
-    "MENU_URL": "https://files.catbox.moe/p826lq.jpg",
+    "MENU_URL": "https://files.catbox.moe/taqv19.png",
     "FOTER": "Hi nnn",
     "USER_COINS": {
-      "447427846660@s.whatsapp.net": 56
+      "447427846660@s.whatsapp.net": 6
     }
   }
 }
