Updated BOT_NAME for session BLADE=fJ02gDbQ#orK4zPNIctc2g55_Q54wGaEzu5E85y3aVchcicwY02g

--- a/config.json
+++ b/config.json
@@ -14,9 +14,9 @@
     "BOT_NAME": "Queen Elizabeth",
     "PASS": "2007",
     "MENU_URL": "https://files.catbox.moe/taqv19.png",
-    "FOTER": "Hi nnn",
+    "FOTER": "Hi bro",
     "USER_COINS": {
-      "447427846660@s.whatsapp.net": 100
+      "447427846660@s.whatsapp.net": 75
     }
   }
 }
