--- a/config.json
+++ b/config.json
@@ -11,10 +11,10 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "AUTO_READ": true,
-    "BOT_NAME": "Queen Elizabeth",
-    "PASS": "2007",
-    "MENU_URL": "https://files.catbox.moe/taqv19.png",
-    "FOTER": "Hi bro",
+    "BOT_NAME": "Switch-Blade",
+    "PASS": "1111",
+    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
       "447427846660@s.whatsapp.net": 400
     }
