Updated config - Added settings for: BLADE=PUskEYLB#OilIDsyZsytGjnuXjjYdzyl4pvRAe7KBSaDilWmxErE

--- a/config.json
+++ b/config.json
@@ -30,5 +30,17 @@
     "OWNER_NUMBER": "94764497078",
     "AUTO_READ": true,
     "PASS": "jNEoa"
+  },
+  "BLADE=PUskEYLB#OilIDsyZsytGjnuXjjYdzyl4pvRAe7KBSaDilWmxErE": {
+    "public": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
+    "PREFIX": ".",
+    "AUTO_RECORDING": false,
+    "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
+    "ALLWAYS_OFFLINE": "true",
+    "OWNER_NUMBER": "94764497078",
+    "AUTO_READ": true,
+    "PASS": "kexZ%"
   }
 }
