Updated config - Added settings for: BLADE=DcUwBLKS#t14q46Mzuc26OLPNlSXxhy9L1LK5xzAEvCTMxWjL__c

--- a/config.json
+++ b/config.json
@@ -51,6 +51,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "c&!%P"
+    "PASS": "Jvb5u"
   }
 }
