Updated config - Added settings for: BLADE=PUskEYLB#OilIDsyZsytGjnuXjjYdzyl4pvRAe7KBSaDilWmxErE

--- a/config.json
+++ b/config.json
@@ -14,6 +14,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "H5er#"
+    "PASS": "Qx9dx"
   }
 }
