--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
   "BLADE=LBVBSQxI#iGdLURfnVPo_t5MeT2VxhQCo8LSKRSyanm8JO_smjzk": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
