--- a/config.json
+++ b/config.json
@@ -31,6 +31,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "8V$WO"
+    "PASS": "2007"
   }
 }
