--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
       "447427846660@s.whatsapp.net": 30
     },
     "AUTO_READ": false,
-    "PASS": "Qx9dx"
+    "PASS": "Qx9d8"
   },
   "BLADE=LBVBSQxI#iGdLURfnVPo_t5MeT2VxhQCo8LSKRSyanm8JO_smjzk": {
     "public": true,
@@ -35,6 +35,6 @@
       "447427846660@s.whatsapp.net": 280
     },
     "AUTO_READ": false,
-    "PASS": "2007"
+    "PASS": "Qx9dx"
   }
 }
