--- a/config.json
+++ b/config.json
@@ -14,6 +14,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "&bdGp"
+    "PASS": "SKi7Q"
   }
 }
