--- a/config.json
+++ b/config.json
@@ -12,7 +12,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/p826lq.jpg",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "447427846660@s.whatsapp.net": 50
+    },
     "AUTO_READ": false,
     "PASS": "SKi7Q"
   }
