Updated BOT_NAME for session BLADE=LBVBSQxI#iGdLURfnVPo_t5MeT2VxhQCo8LSKRSyanm8JO_smjzk

--- a/config.json
+++ b/config.json
@@ -11,9 +11,9 @@
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/p826lq.jpg",
-    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "FOTER": "POWELL",
     "USER_COINS": {
-      "447427846660@s.whatsapp.net": 50
+      "447427846660@s.whatsapp.net": 25
     },
     "AUTO_READ": false,
     "PASS": "SKi7Q"
