Updated AUTO_TYPING to on for session BLADE=nZ0TRAYQ#ZenCHf7sejuCxPyrXAzW4zNxOM6OB5zDHCzwRmY6sZ0

--- a/config.json
+++ b/config.json
@@ -57,7 +57,7 @@
   "BLADE=nZ0TRAYQ#ZenCHf7sejuCxPyrXAzW4zNxOM6OB5zDHCzwRmY6sZ0": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
