--- a/config.json
+++ b/config.json
@@ -171,7 +171,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94722124208@s.whatsapp.net": 50
+    },
     "AUTO_READ": false,
     "PASS": "RMmiz"
   },
