Updated MENU_URL for session BLADE=qZdS1AqQ#irknn6XSDtRm-Eyvx2vADvKmihsxaOfpUtDr8WOkyAA

--- a/config.json
+++ b/config.json
@@ -222,10 +222,10 @@
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
-    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "MENU_URL": "https://files.catbox.moe/khqeb9.jpg",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94773024361@s.whatsapp.net": 250
+      "94773024361@s.whatsapp.net": 200
     },
     "AUTO_READ": false,
     "PASS": "1w3gR"
