Updated BOT_NAME for session BLADE=qZdS1AqQ#irknn6XSDtRm-Eyvx2vADvKmihsxaOfpUtDr8WOkyAA

--- a/config.json
+++ b/config.json
@@ -221,11 +221,11 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "𝘾𝙃𝘼𝙈𝘼 𝙈𝘿",
     "MENU_URL": "https://files.catbox.moe/khqeb9.jpg",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94773024361@s.whatsapp.net": 200
+      "94773024361@s.whatsapp.net": 125
     },
     "AUTO_READ": false,
     "PASS": "1w3gR"
