--- a/config.json
+++ b/config.json
@@ -294,7 +294,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94713787951@s.whatsapp.net": 150
+    },
     "AUTO_READ": false,
     "PASS": "$1rqz"
   },
