Updated BOT_NAME for session BLADE=HVFCmKKQ#gErEg3DrEkQYrpSgTX5tumJ8xSUJsi1AcLjAun2GBZ8

--- a/config.json
+++ b/config.json
@@ -291,11 +291,11 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "*_TD King✓™_*",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94713787951@s.whatsapp.net": 150
+      "94713787951@s.whatsapp.net": 75
     },
     "AUTO_READ": false,
     "PASS": "$1rqz"
