--- a/config.json
+++ b/config.json
@@ -292,10 +292,10 @@
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
     "BOT_NAME": "*_TD King✓™_*",
-    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "MENU_URL": "https://i.ibb.co/7d2FxRc0/6324.jpg",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94713787951@s.whatsapp.net": 75
+      "94713787951@s.whatsapp.net": 25
     },
     "AUTO_READ": false,
     "PASS": "$1rqz"
