--- a/config.json
+++ b/config.json
@@ -316,5 +316,22 @@
     "USER_COINS": {},
     "AUTO_READ": false,
     "PASS": "B#8RJ"
+  },
+  "BLADE=3AMzwSZZ#RFd57wMT3Sa2AIYgK-xkQ0wk6ms67K3bP9ASc5GOUMg": {
+    "public": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
+    "PREFIX": ".",
+    "AUTO_RECORDING": false,
+    "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
+    "ALLWAYS_OFFLINE": "true",
+    "OWNER_NUMBER": "94764497078",
+    "MENU_TYPE": "v3",
+    "BOT_NAME": "Blade md",
+    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "USER_COINS": {},
+    "AUTO_READ": false,
+    "PASS": "Ld#Wm"
   }
 }
