--- a/config.json
+++ b/config.json
@@ -434,7 +434,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94763187142@s.whatsapp.net": 150
+    },
     "AUTO_READ": false,
     "PASS": "Ula72"
   },
