--- a/config.json
+++ b/config.json
@@ -538,10 +538,10 @@
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
-    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "MENU_URL": "https://files.catbox.moe/45nf41.jpg",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94768336361@s.whatsapp.net": 150
+      "94768336361@s.whatsapp.net": 100
     },
     "AUTO_READ": false,
     "PASS": "!fNcP"
