--- a/config.json
+++ b/config.json
@@ -539,9 +539,9 @@
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/45nf41.jpg",
-    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "FOTER": "my name is Damitha",
     "USER_COINS": {
-      "94768336361@s.whatsapp.net": 50
+      "94768336361@s.whatsapp.net": 25
     },
     "AUTO_READ": false,
     "PASS": "!fNcP"
