--- a/config.json
+++ b/config.json
@@ -646,7 +646,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94778638789@s.whatsapp.net": 250
+    },
     "AUTO_READ": false,
     "PASS": "WEQRc"
   }
