--- a/config.json
+++ b/config.json
@@ -618,7 +618,9 @@
   },
   "BLADE=vUUyWBbS#zXMjVwe8id-GTdZCBbkLiyprdJqh68z2c4rTyOdF6Bk": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🩷"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
