Updated BOT_NAME for session BLADE=6VFCiDYB#RH33HBfpJ91jtmR3l0hV4F8rKSegjYU0hZ1FY1uptjI

--- a/config.json
+++ b/config.json
@@ -537,11 +537,11 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "Damitha",
     "MENU_URL": "https://files.catbox.moe/45nf41.jpg",
     "FOTER": "my name is Damitha",
     "USER_COINS": {
-      "94768336361@s.whatsapp.net": 275
+      "94768336361@s.whatsapp.net": 200
     },
     "AUTO_READ": false,
     "PASS": "!fNcP"
