--- a/config.json
+++ b/config.json
@@ -179,7 +179,9 @@
   },
   "BLADE=vddx2Dya#SXP8ZHSxMxaVZPpywBXYB10u01Qt7lINZgsuS6DBZrU": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💗"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
