Add 250 coins to user 94786647352@s.whatsapp.net in session BLADE=aUcWWboS#jwgAB5YpBGvYlYLvkhwLdqlpER_mOfi3fNc3M1Jgr6M

--- a/config.json
+++ b/config.json
@@ -437,7 +437,8 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94763187142@s.whatsapp.net": 450
+      "94763187142@s.whatsapp.net": 450,
+      "94786647352@s.whatsapp.net": 250
     },
     "AUTO_READ": false,
     "PASS": "Ula72"
