--- a/config.json
+++ b/config.json
@@ -426,7 +426,7 @@
   "BLADE=aUcWWboS#jwgAB5YpBGvYlYLvkhwLdqlpER_mOfi3fNc3M1Jgr6M": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
