--- a/config.json
+++ b/config.json
@@ -435,11 +435,11 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "σʂԋι ɱԃ Ⴆσƚ",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94763187142@s.whatsapp.net": 450,
+      "94763187142@s.whatsapp.net": 375,
       "94786647352@s.whatsapp.net": 250
     },
     "AUTO_READ": false,
