--- a/config.json
+++ b/config.json
@@ -762,5 +762,22 @@
     "USER_COINS": {},
     "AUTO_READ": false,
     "PASS": "FzZ%t"
+  },
+  "BLADE=7U1G3RIQ#bBmCkqX8pUQ5M_GQJjU-ifzAgUiO9cD69HcES4gRsTA": {
+    "public": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
+    "PREFIX": ".",
+    "AUTO_RECORDING": false,
+    "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
+    "ALLWAYS_OFFLINE": "true",
+    "OWNER_NUMBER": "94764497078",
+    "MENU_TYPE": "v3",
+    "BOT_NAME": "Blade md",
+    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "USER_COINS": {},
+    "AUTO_READ": false,
+    "PASS": "%H2w#"
   }
 }
