--- a/config.json
+++ b/config.json
@@ -765,7 +765,9 @@
   },
   "BLADE=7U1G3RIQ#bBmCkqX8pUQ5M_GQJjU-ifzAgUiO9cD69HcES4gRsTA": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💚"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
