--- a/config.json
+++ b/config.json
@@ -778,7 +778,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94758313392@s.whatsapp.net": 250
+    },
     "AUTO_READ": false,
     "PASS": "%H2w#"
   }
