--- a/config.json
+++ b/config.json
@@ -777,9 +777,9 @@
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
-    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "FOTER": "Powered by Rehan Geeneth🚀",
     "USER_COINS": {
-      "94758313392@s.whatsapp.net": 250
+      "94758313392@s.whatsapp.net": 225
     },
     "AUTO_READ": false,
     "PASS": "%H2w#"
