Add 250 coins to user 94710632039@s.whatsapp.net in session BLADE=7U1G3RIQ#bBmCkqX8pUQ5M_GQJjU-ifzAgUiO9cD69HcES4gRsTA

--- a/config.json
+++ b/config.json
@@ -779,7 +779,8 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "Powered by Rehan Geeneth🚀",
     "USER_COINS": {
-      "94758313392@s.whatsapp.net": 225
+      "94758313392@s.whatsapp.net": 225,
+      "94710632039@s.whatsapp.net": 250
     },
     "AUTO_READ": false,
     "PASS": "%H2w#"
