--- a/config.json
+++ b/config.json
@@ -776,10 +776,10 @@
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
-    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "MENU_URL": "https://i.ibb.co/G4cX230Q/SulaMd.jpg",
     "FOTER": "Powered by Rehan Geeneth🚀",
     "USER_COINS": {
-      "94758313392@s.whatsapp.net": 225,
+      "94758313392@s.whatsapp.net": 175,
       "94710632039@s.whatsapp.net": 250
     },
     "AUTO_READ": false,
