--- a/config.json
+++ b/config.json
@@ -777,9 +777,9 @@
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://i.ibb.co/G4cX230Q/SulaMd.jpg",
-    "FOTER": "Powered by Rehan Geeneth🚀",
+    "FOTER": "RGR_MD🚀",
     "USER_COINS": {
-      "94758313392@s.whatsapp.net": 175,
+      "94758313392@s.whatsapp.net": 150,
       "94710632039@s.whatsapp.net": 250
     },
     "AUTO_READ": false,
