--- a/config.json
+++ b/config.json
@@ -775,11 +775,11 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "𝐑𝐆𝐑_𝐌𝐃🚀",
     "MENU_URL": "https://i.ibb.co/G4cX230Q/SulaMd.jpg",
     "FOTER": "RGR_MD🚀",
     "USER_COINS": {
-      "94758313392@s.whatsapp.net": 150,
+      "94758313392@s.whatsapp.net": 75,
       "94710632039@s.whatsapp.net": 250
     },
     "AUTO_READ": false,
