Updated config - Added settings for: BLADE=LMk3nK6S#I4S0HIhsD42_upm_VQ2L7vVf8VfzuwUQQVieF1IAbGg

--- a/config.json
+++ b/config.json
@@ -817,6 +817,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "FJ4Ap"
+    "PASS": "PpnyG"
   }
 }
