--- a/config.json
+++ b/config.json
@@ -805,7 +805,7 @@
   "BLADE=LMk3nK6S#I4S0HIhsD42_upm_VQ2L7vVf8VfzuwUQQVieF1IAbGg": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
