Updated config - Added settings for: BLADE=vE9gRJoJ#rsZ9wkyu3syk9lX3y5DBHApz3nzspq1gLKFZUkcRAKY

--- a/config.json
+++ b/config.json
@@ -836,6 +836,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "n8!XW"
+    "PASS": "3BYca"
   }
 }
