--- a/config.json
+++ b/config.json
@@ -859,7 +859,9 @@
   },
   "BLADE=qM0yGShZ#IfGhmOMOcfKECG1Jvyp0-P8EaX6WPh0_Tuc1VltId4o": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "😂"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
