Updated BOT_NAME for session BLADE=HVFCmKKQ#gErEg3DrEkQYrpSgTX5tumJ8xSUJsi1AcLjAun2GBZ8

--- a/config.json
+++ b/config.json
@@ -295,9 +295,9 @@
     "MENU_TYPE": "v3",
     "BOT_NAME": "*_TD King✓™_*",
     "MENU_URL": "https://i.ibb.co/7d2FxRc0/6324.jpg",
-    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "FOTER": "Thihan Dewanmina",
     "USER_COINS": {
-      "94713787951@s.whatsapp.net": 25
+      "94713787951@s.whatsapp.net": 0
     },
     "AUTO_READ": false,
     "PASS": "$1rqz"
