Updated MENU_URL for session BLADE=vE9gRJoJ#rsZ9wkyu3syk9lX3y5DBHApz3nzspq1gLKFZUkcRAKY

--- a/config.json
+++ b/config.json
@@ -832,10 +832,10 @@
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
-    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "MENU_URL": "https://files.catbox.moe/x3e22a.jpg",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94786888371@s.whatsapp.net": 50
+      "94786888371@s.whatsapp.net": 0
     },
     "AUTO_READ": false,
     "PASS": "3BYca"
