Updated config - Added settings for: BLADE=nEslEYiI#cCOQRTRjQ8EcM4AkzxPZTb5WwQMiDCCgmBC-QgksJic

--- a/config.json
+++ b/config.json
@@ -910,6 +910,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "bDyMZ"
+    "PASS": "8Uzj3"
   }
 }
