--- a/config.json
+++ b/config.json
@@ -927,6 +927,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "k5IIN"
+    "PASS": "jVVXY"
   }
 }
