--- a/config.json
+++ b/config.json
@@ -652,11 +652,11 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "*Shamalka-MD*",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94778638789@s.whatsapp.net": 250
+      "94778638789@s.whatsapp.net": 175
     },
     "AUTO_READ": false,
     "PASS": "WEQRc"
