--- a/config.json
+++ b/config.json
@@ -946,6 +946,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "$zt6#"
+    "PASS": "mC8hR"
   }
 }
