Updated config - Added settings for: BLADE=3M9GjSIA#b_G5ApHS0ehVnukSRbWQKWHSYXR-_wnz_QW2r2d9JYQ

--- a/config.json
+++ b/config.json
@@ -997,6 +997,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "MlHbL"
+    "PASS": "RT@KC"
   }
 }
