--- a/config.json
+++ b/config.json
@@ -1001,7 +1001,9 @@
   },
   "BLADE=6YlGQIAa#zEGGeQ6v99m-DsP6HhIcZdUFW1r2LGYHQdxCFAEkTBY": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "💀"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
