--- a/config.json
+++ b/config.json
@@ -910,11 +910,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {
-      "94716717099@s.whatsapp.net": 50
-    },
+    "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "3S3AH"
+    "PASS": "VTq5h"
   },
   "BLADE=iMdSGKYL#ruZTYqUrwsOtndJkpsHeF0IpoZ3fcE2IPO35sWfZ6N4": {
     "public": true,
