--- a/config.json
+++ b/config.json
@@ -950,7 +950,9 @@
   },
   "BLADE=eQtRlaTS#OKdBgzwRSWu2vaVIIodXKZe55dT8IxzTnX1mpa5CGJM": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "❤️‍🩹"
+    ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
