Add 100 coins to user 94762324830@s.whatsapp.net in session BLADE=3M9GjSIA#b_G5ApHS0ehVnukSRbWQKWHSYXR-_wnz_QW2r2d9JYQ

--- a/config.json
+++ b/config.json
@@ -997,7 +997,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94762324830@s.whatsapp.net": 100
+    },
     "AUTO_READ": false,
     "PASS": "RT@KC"
   },
