Updated config - Added settings for: BLADE=nEslEYiI#cCOQRTRjQ8EcM4AkzxPZTb5WwQMiDCCgmBC-QgksJic

--- a/config.json
+++ b/config.json
@@ -912,7 +912,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "e6m2G"
+    "PASS": "mpxjN"
   },
   "BLADE=iMdSGKYL#ruZTYqUrwsOtndJkpsHeF0IpoZ3fcE2IPO35sWfZ6N4": {
     "public": true,
