--- a/config.json
+++ b/config.json
@@ -912,7 +912,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "mpxjN"
+    "PASS": "XAYWs"
   },
   "BLADE=iMdSGKYL#ruZTYqUrwsOtndJkpsHeF0IpoZ3fcE2IPO35sWfZ6N4": {
     "public": true,
