--- a/config.json
+++ b/config.json
@@ -1088,7 +1088,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94788364308@s.whatsapp.net": 50
+    },
     "AUTO_READ": false,
     "PASS": "bUIEi"
   }
