Add 40 coins to user 94786647352@s.whatsapp.net in session BLADE=SBFChApB#nMFyjNt4KH5-JYI2csNQWnaWrByJcKVqbfY1O8mOzps

--- a/config.json
+++ b/config.json
@@ -1126,7 +1126,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94786647352@s.whatsapp.net": 40
+    },
     "AUTO_READ": false,
     "PASS": "x8x!S"
   }
