--- a/config.json
+++ b/config.json
@@ -1145,7 +1145,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94743401417@s.whatsapp.net": 250
+    },
     "AUTO_READ": false,
     "PASS": "sPY7g"
   }
