Add 50 coins to user 94761016249@s.whatsapp.net in session BLADE=OVslgAoS#Xn-ZpFotgfznBqmwjfffhh67DLlcn81Rg-xsobavpyo

--- a/config.json
+++ b/config.json
@@ -656,7 +656,8 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94778638789@s.whatsapp.net": 175
+      "94778638789@s.whatsapp.net": 175,
+      "94761016249@s.whatsapp.net": 50
     },
     "AUTO_READ": false,
     "PASS": "WEQRc"
