--- a/config.json
+++ b/config.json
@@ -1199,7 +1199,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94763965750@s.whatsapp.net": 50
+    },
     "AUTO_READ": false,
     "PASS": "M6lre"
   },
