--- a/config.json
+++ b/config.json
@@ -1207,7 +1207,9 @@
   },
   "BLADE=ON1AxCaA#ENF0UqGW_d-IBAvEXiV-b4atJBLjL4-3AZGcjeLNu08": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🫠🫶"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
