Updated config - Added settings for: BLADE=HNkSCQ7C#cATEuZVdpL82fYvuG3fGUauioi2HozYVgRCGY5cAhQg

--- a/config.json
+++ b/config.json
@@ -264,7 +264,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "foitW"
+    "PASS": "nbQob"
   },
   "BLADE=nUslGYxZ#EkC_CymasTCaRoRoKKAxmP7xlQ6YxAeyREqyh5WidfY": {
     "public": true,
