--- a/config.json
+++ b/config.json
@@ -1199,11 +1199,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {
-      "94763965750@s.whatsapp.net": 50
-    },
+    "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "ohGjX"
+    "PASS": "XYSkS"
   },
   "BLADE=ON1AxCaA#ENF0UqGW_d-IBAvEXiV-b4atJBLjL4-3AZGcjeLNu08": {
     "public": true,
