--- a/config.json
+++ b/config.json
@@ -644,7 +644,9 @@
   },
   "BLADE=OVslgAoS#Xn-ZpFotgfznBqmwjfffhh67DLlcn81Rg-xsobavpyo": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "👑"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
