--- a/config.json
+++ b/config.json
@@ -1227,7 +1227,7 @@
   "BLADE=aRFyCYYL#tYlD55KQjLsR0Ya3PeeLwasvnrgDSFFVICAcXDE4NLE": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
