--- a/config.json
+++ b/config.json
@@ -1226,12 +1226,10 @@
   },
   "BLADE=aRFyCYYL#tYlD55KQjLsR0Ya3PeeLwasvnrgDSFFVICAcXDE4NLE": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "🫶👾"
-    ],
-    "AUTO_TYPING": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": true,
+    "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
@@ -1240,7 +1238,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": true,
-    "PASS": "WwHd5"
+    "AUTO_READ": false,
+    "PASS": "jiO1d"
   }
 }
