Updated AUTO_READ to on for session BLADE=aRFyCYYL#tYlD55KQjLsR0Ya3PeeLwasvnrgDSFFVICAcXDE4NLE

--- a/config.json
+++ b/config.json
@@ -1238,7 +1238,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": false,
+    "AUTO_READ": true,
     "PASS": "jiO1d"
   }
 }
