--- a/config.json
+++ b/config.json
@@ -1263,7 +1263,7 @@
   "BLADE=CVtAhKrC#Dil8reV_unDT0FArfNVv5eFdpbrrRf3EMFvxKnpKkQ4": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
