--- a/config.json
+++ b/config.json
@@ -1262,7 +1262,9 @@
   },
   "BLADE=CVtAhKrC#Dil8reV_unDT0FArfNVv5eFdpbrrRf3EMFvxKnpKkQ4": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🥺💗"
+    ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": true,
