--- a/config.json
+++ b/config.json
@@ -1315,7 +1315,9 @@
   },
   "BLADE=qBsEAYQQ#TrjZE4kfx2xwhn6RaWnYS31cyGckSg2j-I5YWabt5vs": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🖤"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
