--- a/config.json
+++ b/config.json
@@ -264,7 +264,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "nbQob"
+    "PASS": "7q%PC"
   },
   "BLADE=nUslGYxZ#EkC_CymasTCaRoRoKKAxmP7xlQ6YxAeyREqyh5WidfY": {
     "public": true,
