Add 250 coins to user 94710998405@s.whatsapp.net in session BLADE=OR1FCRqa#kbAk8GR1Dt1e-l8o1iEeRXDbayiM1ueVOtker7iOLic

--- a/config.json
+++ b/config.json
@@ -1377,7 +1377,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94710998405@s.whatsapp.net": 250
+    },
     "AUTO_READ": false,
     "PASS": "V&e7K"
   }
