--- a/config.json
+++ b/config.json
@@ -1375,10 +1375,10 @@
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
     "BOT_NAME": "CHAMIYA MD",
-    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "MENU_URL": "https://i.ibb.co/LzpDrDvy/Golden-Queen-MD-VIMAMODS-eyrkh9jo.jpg",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94710998405@s.whatsapp.net": 175
+      "94710998405@s.whatsapp.net": 125
     },
     "AUTO_READ": false,
     "PASS": "V&e7K"
