--- a/config.json
+++ b/config.json
@@ -1402,9 +1402,7 @@
   },
   "BLADE=bBkEDChA#dKFgJrPPdhcLp_mwHHgcU6M5tl_mOedh70Oit_9HROA": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "🌹"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -1415,11 +1413,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {
-      "94773588634@s.whatsapp.net": 50
-    },
+    "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "IsBRc"
+    "PASS": "gH2Yu"
   },
   "BLADE=qFsjybBY#VcSrAh9G9xLnNhDFg6jyrrrvH1PnUp77vLQvghK3uPk": {
     "public": true,
