Updated BOT_NAME for session BLADE=bBkEDChA#dKFgJrPPdhcLp_mwHHgcU6M5tl_mOedh70Oit_9HROA

--- a/config.json
+++ b/config.json
@@ -1412,11 +1412,11 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "Nethmina Official",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94773588634@s.whatsapp.net": 250
+      "94773588634@s.whatsapp.net": 175
     },
     "AUTO_READ": false,
     "PASS": "gH2Yu"
