Updated BOT_NAME for session BLADE=bBkEDChA#dKFgJrPPdhcLp_mwHHgcU6M5tl_mOedh70Oit_9HROA

--- a/config.json
+++ b/config.json
@@ -1414,9 +1414,9 @@
     "MENU_TYPE": "v3",
     "BOT_NAME": "Nethmina Official",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
-    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "FOTER": "𝙿𝙾𝚆𝙴𝚁𝙴𝙳 𝙱𝚈 𝙽𝙴𝚃𝙷𝙼𝙸𝙽𝙰 𝙾𝙵𝙲 ||",
     "USER_COINS": {
-      "94773588634@s.whatsapp.net": 175
+      "94773588634@s.whatsapp.net": 150
     },
     "AUTO_READ": false,
     "PASS": "gH2Yu"
