--- a/config.json
+++ b/config.json
@@ -1402,9 +1402,7 @@
   },
   "BLADE=bBkEDChA#dKFgJrPPdhcLp_mwHHgcU6M5tl_mOedh70Oit_9HROA": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "🌹"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -1412,14 +1410,12 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Nethmina Official",
+    "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
-    "FOTER": "𝙿𝙾𝚆𝙴𝚁𝙴𝙳 𝙱𝚈 𝙽𝙴𝚃𝙷𝙼𝙸𝙽𝙰 𝙾𝙵𝙲 ||",
-    "USER_COINS": {
-      "94773588634@s.whatsapp.net": 150
-    },
+    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "gH2Yu"
+    "PASS": "nb9qV"
   },
   "BLADE=qFsjybBY#VcSrAh9G9xLnNhDFg6jyrrrvH1PnUp77vLQvghK3uPk": {
     "public": true,
