--- a/config.json
+++ b/config.json
@@ -1413,7 +1413,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94773588634@s.whatsapp.net": 250
+    },
     "AUTO_READ": false,
     "PASS": "nb9qV"
   },
