Updated config - Added settings for: BLADE=OR1FCRqa#kbAk8GR1Dt1e-l8o1iEeRXDbayiM1ueVOtker7iOLic

--- a/config.json
+++ b/config.json
@@ -1374,14 +1374,12 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "CHAMIYA MD",
-    "MENU_URL": "https://i.ibb.co/LzpDrDvy/Golden-Queen-MD-VIMAMODS-eyrkh9jo.jpg",
+    "BOT_NAME": "Blade md",
+    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {
-      "94710998405@s.whatsapp.net": 375
-    },
+    "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "V&e7K"
+    "PASS": "DdrKo"
   },
   "BLADE=XcEyUIpb#s-rcN5n0qlLABlkn4V4rXJr1en7KB_7x3SPh9zCUh0k": {
     "public": true,
