--- a/config.json
+++ b/config.json
@@ -1410,9 +1410,9 @@
     "MENU_TYPE": "v3",
     "BOT_NAME": "Nethmina Official",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
-    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "FOTER": "© ᴘᴏᴡᴇʀᴇᴅ ʙʏ ɴᴇᴛʜᴍɪɴᴀ ᴏꜰᴄ ||",
     "USER_COINS": {
-      "94773588634@s.whatsapp.net": 175
+      "94773588634@s.whatsapp.net": 150
     },
     "AUTO_READ": false,
     "PASS": "nb9qV"
