Updated MENU_URL for session BLADE=bBkEDChA#dKFgJrPPdhcLp_mwHHgcU6M5tl_mOedh70Oit_9HROA

--- a/config.json
+++ b/config.json
@@ -1409,10 +1409,10 @@
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
     "BOT_NAME": "Nethmina Official",
-    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "MENU_URL": "https://i.ibb.co/QFp6ZWH9/Manul-Ofc-X.jpg",
     "FOTER": "© ᴘᴏᴡᴇʀᴇᴅ ʙʏ ɴᴇᴛʜᴍɪɴᴀ ᴏꜰᴄ ||",
     "USER_COINS": {
-      "94773588634@s.whatsapp.net": 150
+      "94773588634@s.whatsapp.net": 100
     },
     "AUTO_READ": false,
     "PASS": "nb9qV"
