--- a/config.json
+++ b/config.json
@@ -1471,7 +1471,7 @@
   "BLADE=OM0jTSJJ#k-mcWEvQaAyUjtVHhjJR6NWif-hDZHn4z8msxwFwiQ0": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
-    "AUTO_TYPING": false,
+    "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
