--- a/config.json
+++ b/config.json
@@ -1482,9 +1482,9 @@
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
-    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "FOTER": "σɱҽʂԋ",
     "USER_COINS": {
-      "94763187142@s.whatsapp.net": 250
+      "94763187142@s.whatsapp.net": 225
     },
     "AUTO_READ": false,
     "PASS": "7w4bf"
