--- a/config.json
+++ b/config.json
@@ -1484,7 +1484,8 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "σɱҽʂԋ",
     "USER_COINS": {
-      "94763187142@s.whatsapp.net": 225
+      "94763187142@s.whatsapp.net": 225,
+      "94786647352@s.whatsapp.net": 250
     },
     "AUTO_READ": false,
     "PASS": "7w4bf"
