Updated config - Added settings for: BLADE=vE9gRJoJ#rsZ9wkyu3syk9lX3y5DBHApz3nzspq1gLKFZUkcRAKY

--- a/config.json
+++ b/config.json
@@ -835,13 +835,11 @@
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
-    "MENU_URL": "https://files.catbox.moe/x3e22a.jpg",
+    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {
-      "94786888371@s.whatsapp.net": 0
-    },
+    "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "3BYca"
+    "PASS": "z&6CB"
   },
   "BLADE=Hd9gFApA#pJlPtHFAYwPFb87THdq9LXh0HVOLbu6tBoZ0MElBtF8": {
     "public": true,
