Add 50 coins to user 94779290433@s.whatsapp.net in session BLADE=fdUBTT5B#NcnH54iM9Q-tR90ES3z90-MsBrBwuQmRNHU_Df_xwNA

--- a/config.json
+++ b/config.json
@@ -1503,7 +1503,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94779290433@s.whatsapp.net": 50
+    },
     "AUTO_READ": false,
     "PASS": "!Z4z3"
   }
