--- a/config.json
+++ b/config.json
@@ -1540,9 +1540,9 @@
     "MENU_TYPE": "v3",
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
-    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "FOTER": "powerd by sandes_md",
     "USER_COINS": {
-      "94716717099@s.whatsapp.net": 50
+      "94716717099@s.whatsapp.net": 25
     },
     "AUTO_READ": false,
     "PASS": "cf6D6"
