Updated config - Added settings for: BLADE=LYMGXIzb#SRGKT1Wi-wrJIBWffF3Mm7pf9T1SgzCcnZ3ATJrbuIM

--- a/config.json
+++ b/config.json
@@ -1449,7 +1449,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "uCXVy"
+    "PASS": "eMbRc"
   },
   "BLADE=CNVFFSQA#_BE12PXu0l55xFk2u0RjepITgWKntrj4fnXc__cOAuU": {
     "public": true,
