Updated config - Added settings for: BLADE=bBkEDChA#dKFgJrPPdhcLp_mwHHgcU6M5tl_mOedh70Oit_9HROA

--- a/config.json
+++ b/config.json
@@ -1408,14 +1408,12 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Nethmina Official",
-    "MENU_URL": "https://i.ibb.co/QFp6ZWH9/Manul-Ofc-X.jpg",
-    "FOTER": "© ᴘᴏᴡᴇʀᴇᴅ ʙʏ ɴᴇᴛʜᴍɪɴᴀ ᴏꜰᴄ ||",
-    "USER_COINS": {
-      "94773588634@s.whatsapp.net": 500
-    },
+    "BOT_NAME": "Blade md",
+    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "nb9qV"
+    "PASS": "Ng7l1"
   },
   "BLADE=qFsjybBY#VcSrAh9G9xLnNhDFg6jyrrrvH1PnUp77vLQvghK3uPk": {
     "public": true,
@@ -1449,7 +1447,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "eMbRc"
+    "PASS": "uCXVy"
   },
   "BLADE=CNVFFSQA#_BE12PXu0l55xFk2u0RjepITgWKntrj4fnXc__cOAuU": {
     "public": true,
