Updated config - Added settings for: BLADE=CNVFFSQA#_BE12PXu0l55xFk2u0RjepITgWKntrj4fnXc__cOAuU

--- a/config.json
+++ b/config.json
@@ -1408,12 +1408,14 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
-    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
-    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "BOT_NAME": "Nethmina Official",
+    "MENU_URL": "https://i.ibb.co/QFp6ZWH9/Manul-Ofc-X.jpg",
+    "FOTER": "© ᴘᴏᴡᴇʀᴇᴅ ʙʏ ɴᴇᴛʜᴍɪɴᴀ ᴏꜰᴄ ||",
+    "USER_COINS": {
+      "94773588634@s.whatsapp.net": 500
+    },
     "AUTO_READ": false,
-    "PASS": "Ng7l1"
+    "PASS": "nb9qV"
   },
   "BLADE=qFsjybBY#VcSrAh9G9xLnNhDFg6jyrrrvH1PnUp77vLQvghK3uPk": {
     "public": true,
@@ -1464,7 +1466,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "F8DZ7"
+    "PASS": "u4$xz"
   },
   "BLADE=OM0jTSJJ#k-mcWEvQaAyUjtVHhjJR6NWif-hDZHn4z8msxwFwiQ0": {
     "public": true,
