Updated config - Added settings for: BLADE=CNVFFSQA#_BE12PXu0l55xFk2u0RjepITgWKntrj4fnXc__cOAuU

--- a/config.json
+++ b/config.json
@@ -1466,7 +1466,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "u4$xz"
+    "PASS": "Q&cj%"
   },
   "BLADE=OM0jTSJJ#k-mcWEvQaAyUjtVHhjJR6NWif-hDZHn4z8msxwFwiQ0": {
     "public": true,
