Updated config - Added settings for: BLADE=bcMyHJiQ#iJbjZnIwzdLevWGIx4IU8-EhkCrNK2YGMGrdZsn3Kp0

--- a/config.json
+++ b/config.json
@@ -1292,7 +1292,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "4qW%k"
+    "PASS": "MyYFW"
   },
   "BLADE=WVF0nYAC#A9si7AiP9SBKwMABx5LUpIVoN9zTfevJy9ANQsUXDz4": {
     "public": true,
