--- a/config.json
+++ b/config.json
@@ -659,7 +659,8 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
       "94778638789@s.whatsapp.net": 175,
-      "94761016249@s.whatsapp.net": 300
+      "94761016249@s.whatsapp.net": 300,
+      "94769741977@s.whatsapp.net": 250
     },
     "AUTO_READ": false,
     "PASS": "WEQRc"
