Updated config - Added settings for: BLADE=2ctBGbbb#gvHPPEFKjjOeElKz9zvtRM_ZHk9DsOgE8yiHROBcncc

--- a/config.json
+++ b/config.json
@@ -1204,7 +1204,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "XYSkS"
+    "PASS": "!$oA0"
   },
   "BLADE=ON1AxCaA#ENF0UqGW_d-IBAvEXiV-b4atJBLjL4-3AZGcjeLNu08": {
     "public": true,
