Updated config - Added settings for: BLADE=bBkEDChA#dKFgJrPPdhcLp_mwHHgcU6M5tl_mOedh70Oit_9HROA

--- a/config.json
+++ b/config.json
@@ -1414,7 +1414,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "Ng7l1"
+    "PASS": "mflog"
   },
   "BLADE=qFsjybBY#VcSrAh9G9xLnNhDFg6jyrrrvH1PnUp77vLQvghK3uPk": {
     "public": true,
