Updated AUTO_READ to on for session BLADE=KcMRjK7K#s2WOSUXRrMgnSW2CGJoaSjxtrM8LSJBD8QS-AORgOMQ

--- a/config.json
+++ b/config.json
@@ -1625,7 +1625,7 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": false,
+    "AUTO_READ": true,
     "PASS": "VmMdy"
   },
   "BLADE=mYtX1SxK#Y_nG9aeWX6XIAe7yNSVYjnh7cV1dFnbge7mzSii9KX4": {
