Updated config - Added settings for: BLADE=vMUVCJzD#1VOssN9fRO8TUb-NQ7pWRsitfbLPJScszEuwClQ_OSE

--- a/config.json
+++ b/config.json
@@ -1556,7 +1556,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "MzmGm"
+    "PASS": "I&bgC"
   },
   "BLADE=LMtwVSYQ#BJNts3UmApnjqoE5nTcDGj2BK-SGgx3UyePIdt33Dc4": {
     "public": true,
