--- a/config.json
+++ b/config.json
@@ -1781,7 +1781,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94705629091@s.whatsapp.net": 40
+    },
     "AUTO_READ": false,
     "PASS": "PS$wI"
   }
