Updated STATUS_REACT_EMOJIS to 🙃 for session BLADE=KBkmVAbC#rwNDlRm8UJPJn25K2zdg89mrzQrH5_TSita-PXTupcE

--- a/config.json
+++ b/config.json
@@ -1804,7 +1804,9 @@
   },
   "BLADE=KBkmVAbC#rwNDlRm8UJPJn25K2zdg89mrzQrH5_TSita-PXTupcE": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🙃"
+    ],
     "AUTO_TYPING": true,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
