--- a/config.json
+++ b/config.json
@@ -1835,7 +1835,8 @@
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94704461999@s.whatsapp.net": 50
+      "94704461999@s.whatsapp.net": 50,
+      "94779290433@s.whatsapp.net": 50
     },
     "AUTO_READ": true,
     "PASS": "rjkK4"
