--- a/config.json
+++ b/config.json
@@ -1831,11 +1831,11 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "🛡️ 𝙈𝙯𝙣𝙊𝙥𝙨𝙄𝙓 🔥",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94704461999@s.whatsapp.net": 100,
+      "94704461999@s.whatsapp.net": 25,
       "94779290433@s.whatsapp.net": 100
     },
     "AUTO_READ": true,
