--- a/config.json
+++ b/config.json
@@ -1893,5 +1893,22 @@
     "USER_COINS": {},
     "AUTO_READ": false,
     "PASS": "HlqEB"
+  },
+  "BLADE=GVkHmDJJ#bwThUAEvvhX0l4ImLJ4_2Z45aqOsuJMkoZ4Ii1l1UU8": {
+    "public": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
+    "PREFIX": ".",
+    "AUTO_RECORDING": false,
+    "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
+    "ALLWAYS_OFFLINE": "true",
+    "OWNER_NUMBER": "94764497078",
+    "MENU_TYPE": "v3",
+    "BOT_NAME": "Blade md",
+    "MENU_URL": "https://files.catbox.moe/p826lq.jpg",
+    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "USER_COINS": {},
+    "AUTO_READ": false,
+    "PASS": "UX7mL"
   }
 }
