Updated STATUS_REACT_EMOJIS to 🫣 for session BLADE=fZ9h0TYQ#e7fNpQW8J-PPO6fqC4YxyQ_Ha9djQjgfM-PMeGwId2c

--- a/config.json
+++ b/config.json
@@ -1947,7 +1947,9 @@
   },
   "BLADE=fZ9h0TYQ#e7fNpQW8J-PPO6fqC4YxyQ_Ha9djQjgfM-PMeGwId2c": {
     "public": true,
-    "STATUS_REACT_EMOJIS": "❤️",
+    "STATUS_REACT_EMOJIS": [
+      "🫣"
+    ],
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
