Updated config - Added settings for: BLADE=fZ9h0TYQ#e7fNpQW8J-PPO6fqC4YxyQ_Ha9djQjgfM-PMeGwId2c

--- a/config.json
+++ b/config.json
@@ -1947,9 +1947,7 @@
   },
   "BLADE=fZ9h0TYQ#e7fNpQW8J-PPO6fqC4YxyQ_Ha9djQjgfM-PMeGwId2c": {
     "public": true,
-    "STATUS_REACT_EMOJIS": [
-      "🫣"
-    ],
+    "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
     "AUTO_RECORDING": false,
@@ -1962,6 +1960,6 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "5DXOg"
+    "PASS": "CJrkV"
   }
 }
