Updated AUTO_READ to on for session BLADE=aRsFhZYI#UkmJYRzDXvNv4CvGabmA9VB7y1oTY23-28gH2JVfwGs

--- a/testconfig.json
+++ b/testconfig.json
@@ -30,7 +30,7 @@
     "MENU_URL": "https://files.catbox.moe/p826lq.jpg",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
-    "AUTO_READ": false,
+    "AUTO_READ": true,
     "PASS": "z9bHM"
   }
 }
