--- a/config.json
+++ b/config.json
@@ -88,12 +88,12 @@
     "AUTO_READ": false,
     "PASS": "6CF&h"
   },
-  "BLADE=nQViWLBZ#GuATClczoubOqFkHi_SM749zK71NCk2EZDICNXvsViY": {
+  "BLADE=aRsFhZYI#UkmJYRzDXvNv4CvGabmA9VB7y1oTY23-28gH2JVfwGs": {
     "public": true,
     "STATUS_REACT_EMOJIS": "❤️",
     "AUTO_TYPING": false,
     "PREFIX": ".",
-    "AUTO_RECORDING": false,
+    "AUTO_RECORDING": true,
     "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
@@ -103,7 +103,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "dWb3E"
+    "PASS": "z9bHM"
   },
   "BLADE=aY8VRRzC#wK66zMegYsoQ0wA1jcwimTqrhNg5sIoPVP5XTg8oLs4": {
     "public": true,
