Updated config - Added settings for: BLADE=DM13xaRa#bzut3EfkbLpDUcCxbiwJ8B8PvT-3JkhNJ41YbUbTGJY

--- a/config.json
+++ b/config.json
@@ -1926,7 +1926,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "mR4$M"
+    "PASS": "xzA2E"
   },
   "BLADE=yctVQZyA#pIKglUQwpOn6X2tOdkeY7wSGb4uX7SWV7PLfNhb6wa8": {
     "public": true,
@@ -1958,8 +1958,10 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94752269410@s.whatsapp.net": 50
+    },
     "AUTO_READ": false,
-    "PASS": "&&XuZ"
+    "PASS": "CJrkV"
   }
 }
