--- a/config.json
+++ b/config.json
@@ -1926,7 +1926,7 @@
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "xzA2E"
+    "PASS": "mR4$M"
   },
   "BLADE=yctVQZyA#pIKglUQwpOn6X2tOdkeY7wSGb4uX7SWV7PLfNhb6wa8": {
     "public": true,
@@ -1958,10 +1958,8 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {
-      "94752269410@s.whatsapp.net": 50
-    },
+    "USER_COINS": {},
     "AUTO_READ": false,
-    "PASS": "CJrkV"
+    "PASS": "Zn3%n"
   }
 }
