--- a/config.json
+++ b/config.json
@@ -1997,5 +1997,22 @@
     "USER_COINS": {},
     "AUTO_READ": false,
     "PASS": "4Ik&l"
+  },
+  "BLADE=uQlngQaK#ADBGb_mRY_SKKlm-iF1tck4o-_cgQ0Qb6Vakyeh20tA": {
+    "public": true,
+    "STATUS_REACT_EMOJIS": "❤️",
+    "AUTO_TYPING": false,
+    "PREFIX": ".",
+    "AUTO_RECORDING": false,
+    "CAPTION": "*☘️ මේ වගේ ලස්සන සිංදු අහන්න අපිව Follow කරන්න 😫🩵*\n\n_*රියැක්ට් එකකුත් දාන් යන්න*_ 😍💚",
+    "ALLWAYS_OFFLINE": "true",
+    "OWNER_NUMBER": "94764497078",
+    "MENU_TYPE": "v3",
+    "BOT_NAME": "Blade md",
+    "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
+    "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
+    "USER_COINS": {},
+    "AUTO_READ": false,
+    "PASS": "er%@x"
   }
 }
