--- a/config.json
+++ b/config.json
@@ -2011,7 +2011,9 @@
     "BOT_NAME": "Blade md",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
-    "USER_COINS": {},
+    "USER_COINS": {
+      "94779290433@s.whatsapp.net": 250
+    },
     "AUTO_READ": true,
     "PASS": "er%@x"
   }
