Updated BOT_NAME for session BLADE=uQlngQaK#ADBGb_mRY_SKKlm-iF1tck4o-_cgQ0Qb6Vakyeh20tA

--- a/config.json
+++ b/config.json
@@ -2008,11 +2008,11 @@
     "ALLWAYS_OFFLINE": "true",
     "OWNER_NUMBER": "94764497078",
     "MENU_TYPE": "v3",
-    "BOT_NAME": "Blade md",
+    "BOT_NAME": "🛡️ 𝙈𝙯𝙣𝙊𝙥𝙨𝙄𝙓 🔥",
     "MENU_URL": "https://files.catbox.moe/m08fin.jfif",
     "FOTER": "> ᴘᴏᴡᴇʀᴅ ʙʏ ᴋɪɴɢ ꜱᴡɪᴛᴄʜ",
     "USER_COINS": {
-      "94779290433@s.whatsapp.net": 750
+      "94779290433@s.whatsapp.net": 675
     },
     "AUTO_READ": true,
     "PASS": "er%@x"
